// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<TextFieldWrapper
  classes={Object {}}
  error={false}
  floatingLabelText="This is a test textfield component"
  fullWidth={true}
  name="testField"
  type="text"
/>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<TextFieldWrapper
  className="requiredField"
  classes={Object {}}
  error={false}
  floatingLabelText="This is a test textfield component"
  fullWidth={true}
  name="testField"
  type="text"
/>
`;
